--- a/SoundWizard/MainWindow.xaml
+++ b/SoundWizard/MainWindow.xaml
@@ -232,5 +232,8 @@
         <KeyBinding Command="{Binding ExitFullScreenCommand}" Key="Esc" 
                     CommandParameter="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type Window}}}">
         </KeyBinding>
+        <KeyBinding Command="{Binding RemoveSongCommand}" Key="Delete" 
+                    CommandParameter="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type Window}}}">
+        </KeyBinding>
     </Window.InputBindings>
 </controls:MetroWindow>
